akerha routes organized into controllers

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,6 +9,12 @@
 <body>
     <header style="border-bottom: 5px black solid">
         <h1>Ahbeh || Akerha</h1>
+        <ul>
+            <li><a href='/ahbeh/foods'>Favorite Foods</a></li>
+            <li><a href='/ahbeh/animals'>Favorite Animals</a></li>
+            <li><a href='/akerha/movies'>Worst Movies</a></li>
+            <li><a href='/akerha/products'>Worst Products</a></li>
+        </ul>
     </header>
     <% // body tag is where all the other ejs %> 
     <% // content will go %> 
